# teamgun

./: README.md  pyproject.toml
src/teamgun1/: news.py  weather_show.py
tests/: test_news.py  test_weather.py
