[project]
name = "teamgun1"
version = "0.1.1"
description = "team project"
authors = [
    {name = "baamboo", email = "beom5236@gmail.com"},
    {name = "leesung02", email = "leesung02@naver.com"},
    {name = "Chong5084", email = "dmschd9647@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
